--- a/WebApp/Views/Default/Test.cshtml
+++ b/WebApp/Views/Default/Test.cshtml
@@ -78,16 +78,37 @@
     <input type="button" id="btnPrint" value="text">
     <input type="hidden" id="hdnFrom" value="" />
     <input type="hidden" id="hdnColor" value="" />
+    <input type="hidden" id="hdnDown" value="" />
 </body>
 </html>
 <script>
-    $(".touch").mousedown(function () {
+    function test(obj,move,down) {
         var idx = 0;
         var array = ["red", "yellow", "green", "cyan", "pink", "blue", "gold", "yellowgreen"];
         var fromPos = $("#hdnFrom").text();
 
+        if (Number($("#hdnDown").text()) != 1 && !down) {
+            // Color用Hiddenへ設定
+            $("#hdnColor").text(Number($("#hdnColor").text())+1);
+            return true;
+        }
+
+        if (Number($("#hdnDown").text()) == 1 && down) {
+            // MouseDown用Hiddenへ設定
+            $("#hdnFrom").text("");
+            $("#hdnDown").text("");
+            // Color用Hiddenへ設定
+            $("#hdnColor").text(Number($("#hdnColor").text())+1);
+            return true;
+        }
+
+        if (Number($("#hdnDown").text()) != 1 && down) {
+            // MouseDown用Hiddenへ設定
+            $("#hdnDown").text(1);
+        }
+
         // Color設定判定
-        if ($("#hdnColor").text() != "") {
+        if ($("#hdnColor").text() != "" && !move){
             var idx = Number($("#hdnColor").text()) + 1;
         }
 
@@ -98,7 +119,7 @@
 
         if (fromPos != "") {
             // To取得
-            toPos = Number($('[id=' + $(this).attr("id") + ']').text());
+            toPos = Number($('[id=' + $(obj).attr("id") + ']').text());
             fromPos = Number(fromPos);
 
             // From-Toの逆転判定
@@ -123,11 +144,21 @@
         }
         else {
             // From取得
-            fromPos = $('[id=' + $(this).attr("id") + ']').text();
+            fromPos = $('[id=' + $(obj).attr("id") + ']').text();
             // スタイル追加
-            $('[id=' + $(this).attr("id") + ']').css("background-color", array[idx]);
+            $('[id=' + $(obj).attr("id") + ']').css("background-color", array[idx]);
             // From用Hiddenへ設定
             $("#hdnFrom").text(fromPos);
-         }
+        }
+        //console.log($("#hdnFrom").text());
+         return true;
+    }
+    $(".touch").mousedown(function () {
+        var a = test(this, false, true);
+    });
+
+    $(".touch").mousemove(function () {
+        //console.log("mousemove!!");
+        var a = test(this, true, false);
     });
 </script>
